--- a/trailer.html
+++ b/trailer.html
@@ -197,7 +197,7 @@
           <div class="trailer-carousel">
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/2W6JHfZIv3U"
+                src="https://www.youtube.com/embed/wQrosq-3XQY?si=ABpWNQJ7lqwav9MR"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
