--- a/trailer.html
+++ b/trailer.html
@@ -127,7 +127,7 @@
 
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/uYPbbksJxIg"
+                src="https://www.youtube.com/embed/_OKAwz2MsJs?si=WM2hOy6bUIaClP-S"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
@@ -142,7 +142,7 @@
 
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/JfVOs4VSpmA"
+                src="https://www.youtube.com/embed/__2bjWbetsA?si=WG7YBKEaA38_Rdd-"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
@@ -162,7 +162,7 @@
           <div class="trailer-carousel">
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/bK6ldnjE3Y0"
+                src="https://www.youtube.com/embed/nb_fFj_0rq8?si=RmpeTRJvdFUCPAtu"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
@@ -177,7 +177,7 @@
 
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/hRFY_Fesa9Q"
+                src="https://www.youtube.com/embed/PvhIJm-J-QY?si=FPRL-IAVbBry8rYD"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
@@ -197,7 +197,7 @@
           <div class="trailer-carousel">
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/wQrosq-3XQY?si=ABpWNQJ7lqwav9MR"
+                src="https://www.youtube.com/embed/0y0lkpf478E?si=Rxfc_sg-TydW6eh3"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
@@ -212,7 +212,7 @@
 
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/a8Gx8wiNbs8"
+                src="https://www.youtube.com/embed/IHLxoh6LHx4?si=DryN_2sFKReAztPB"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
@@ -234,7 +234,7 @@
           <div class="trailer-carousel">
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/QdpxoFcdORI"
+                src="https://www.youtube.com/embed/mqqft2x_Aa4?si=pkyfUh9Uz3BOdmSR"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
@@ -247,7 +247,7 @@
 
             <div class="trailer-card">
               <iframe
-                src="https://www.youtube.com/embed/tgbNymZ7vqY"
+                src="https://www.youtube.com/embed/_Z3QKkl1WyM?si=ibLIcEHFiobp4JsY"
                 allowfullscreen
               ></iframe>
               <div class="trailer-info">
